Allow BazelPackageLoader to load external repositories. Also, disallow BazelPackageLoader from fetching missing external repos.
Integration tests for BazelPackageLoader wrt external repos will be left for a follow-up CL.

RELNOTES: None.
PiperOrigin-RevId: 188967694